K8s/Manifests/homarr/homarr.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: homarr
  labels:
    argocd.argoproj.io/instance: homarr
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homarr
  namespace: homarr
  labels:
    argocd.argoproj.io/instance: homarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homarr
  template:
    metadata:
      name: homarr
      labels:
        app: homarr
    spec:
      containers:
        - name: homarr
          image: ghcr.io/ajnart/homarr:v0.15.3
          volumeMounts:
            - name: homarr-pvc
              mountPath: "/app/data/configs"
              subPath: "homarr-config/"
            - name: homarr-pvc
              mountPath: "/app/public/icons"
              subPath: "icons/"
            - name: homarr-pvc
              mountPath: "/data"
              subPath: "data/"
          ports:
            - containerPort: 7575
          resources:
            limits:
              memory: "1Gi"
              cpu: "1000m"
      volumes:
        - name: homarr-pvc
          persistentVolumeClaim:
            claimName: homarr-pvc
      
---
apiVersion: v1
kind: Service
metadata:
  name: homarr-service
  namespace: homarr
  labels:
    argocd.argoproj.io/instance: homarr
spec:
  selector:
    app: homarr
  ports:
  - port: 80
    targetPort: 7575
  type: ClusterIP
