K8s/Manifests/homarr/homarr-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: homarr-ingress
  namespace: homarr
  labels:
    argocd.argoproj.io/instance: homarr
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`www.homarr.z3cyber.pro`)
      kind: Rule
      services:
        - name: homarr-service
          port: 80
    - match: Host(`homarr.z3cyber.pro`)
      kind: Rule
      services:
        - name: homarr-service
          port: 80
      middlewares:
        - name: default-headers
  tls:
    secretName: production-cert-tls
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: default-headers
  namespace: homarr
  labels:
    argocd.argoproj.io/instance: homarr
spec:
  headers:
    browserXssFilter: true
    contentTypeNosniff: true
    forceSTSHeader: true
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 15552000
    customFrameOptionsValue: SAMEORIGIN
    customRequestHeaders:
      X-Forwarded-Proto: https
